--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@preact/signals-react": "^1.3.6",
     "@prisma/client": "^5.5.2",
     "next": "14.0.1",
     "react": "^18",
