--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev --experimental-https",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@preact/signals-react": "^1.3.6",
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.1",
+    "date-fns": "^2.30.0",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loader-spinner": "^5.4.5",
+    "react-toastify": "^9.1.3",
+    "rollbar": "^2.26.2",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "eslint": "^8",
