--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "@rollbar/react": "^0.11.2",
+    "@sentry/nextjs": "^7.80.0",
     "axios": "^1.6.1",
     "date-fns": "^2.30.0",
     "next": "14.0.1",
