--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --experimental-https",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\""
+    "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\"",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
@@ -23,8 +24,15 @@
     "twilio": "^4.19.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
+    "nock": "^13.3.8",
     "prisma": "^5.5.2"
   }
 }
