--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.8.1",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@rollbar/react": "^0.11.2",
     "@sentry/nextjs": "^7.80.0",
     "axios": "^1.6.1",
