--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^14.1.0",
     "@prisma/client": "^5.8.1",
     "@prisma/extension-accelerate": "^0.6.2",
     "@rollbar/react": "^0.11.2",
