--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-loader-spinner": "^5.4.5",
     "react-toastify": "^9.1.3",
     "rollbar": "^2.26.2",
-    "twilio": "^4.19.0"
+    "twilio": "^4.19.0",
+    "zoho_twilio_integration_next": "link:"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
