--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https",
-    "build": "prisma generate --no-engine && next build",
+    "build": "prisma generate --no-engine  && next build",
     "start": "next start",
     "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\"",
     "test": "jest --watch"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^14.1.0",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.13.0",
     "@prisma/extension-accelerate": "^0.6.2",
     "@rollbar/react": "^0.11.2",
     "@sentry/nextjs": "^7.80.0",
+    "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.1",
+    "csv-parser": "^3.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "next": "14.0.1",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^5.4.5",
@@ -35,7 +39,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-axios": "^4.7.3",
-    "nock": "^13.3.8",
-    "prisma": "^5.5.2"
+    "nock": "^13.3.8"
   }
 }
