--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https",
-    "build": "prisma generate --no-engine  && next build",
+    "build": "prisma generate  && next build",
     "start": "next start",
     "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\"",
     "test": "jest --watch"
