--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@next/bundle-analyzer": "^14.1.0",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@rollbar/react": "^0.11.2",
     "@sentry/nextjs": "^7.80.0",
     "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "csv-parser": "^3.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.453.0",
     "next": "14.0.1",
     "prisma": "^5.13.0",
     "react": "^18",
@@ -26,6 +31,8 @@
     "react-loader-spinner": "^5.4.5",
     "react-toastify": "^9.1.3",
     "rollbar": "^2.26.2",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "twilio": "^4.19.0",
     "zoho_twilio_integration_next": "link:"
   },
@@ -33,11 +40,14 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-axios": "^4.7.3",
-    "nock": "^13.3.8"
+    "nock": "^13.3.8",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
