Refactor Twilio and Zoho integration to use updated phone fields and improve message handling. Added 'twilioPhone' and 'zohoVoicePhone' fields in the schema, updated relevant queries and components to reflect these changes, and streamlined message sending logic to accommodate new sender options.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate  && next build",
     "start": "next start",
     "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\"",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^14.1.0",
