--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-mock-axios": "^4.7.3",
     "nock": "^13.3.8",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "tsx": "^4.20.3"
   }
 }
