Remove unused files and add ZohoTask model to schema for task management

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zoho_twilio_integration_next",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --experimental-https",
     "build": "prisma generate  && next build",
