--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "zoho_twilio_integration_next",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev --experimental-https",
     "build": "prisma generate  && next build",
@@ -28,6 +27,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.0.1",
     "posthog-js": "^1.219.6",
+    "posthog-node": "^5.5.1",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
