--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --experimental-https",
     "build": "prisma generate  && next build",
     "start": "next start",
-    "lint": "next lint \"*/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "next lint .",
     "test": "jest --watch",
     "db:push": "prisma db push"
   },
